<resources>
    <string name="app_name">Job Tracker</string>
    <string name="job_tracker">Job Tracker</string>
    <string name="title_activity_about">About Job Tracker</string>
    <string name="title_activity_employer">ActivityEmployer</string>
    <string name="action_settings">Settings</string>
    <string name="release_notes">Release Notes</string>
    <string name="add">Add</string>
    <string name="add_new_employer">New Employer</string>
    <string name="add_employer_title">Select an employer from the list below or enter a new employer name</string>
    <string name="select_existing_employer">Select Existing Employer</string>
    <string name="employer_name">Emp Name</string>
    <string name="contact">Contact</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="state_abbrev">St</string>
    <string name="zipcode">Zipcode</string>
    <string name="phone_cell">Cell Phone</string>
    <string name="phone_alt">Alt Phone</string>
    <string name="phone_cell_short">Cell#</string>
    <string name="phone_alt_short">Alt#</string>
    <string name="email1">e-Mail 1</string>
    <string name="email2">e-Mail 2</string>
    <string name="website">Website</string>
    <string name="job">Job</string>
    <string name="worklog">Worklog</string>
    <string name="worklogs">Worklogs</string>
    <string name="times">Times</string>
    <string name="miles">Miles</string>

    // Strings for About Activity
    <string name="aboutAuthor">RDF Mobile Apps</string>
    <string name="copyright">Copyright 2017  RDF Mobile Apps</string>
    <string name="version">Version</string>
    <string name="buildDate">Build Date</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackText">Send me your feedback...issues, bugs, suggestions, or just comments</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="db_schema">Database Schema</string>
    // End Strings for About Activity

    <string name="new_job">New Job</string>
    <string name="employers">Employers</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_worklog">+Worklog</string>
    <string name="job_name">Job Name</string>
    <string name="employer">Employer</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="total">Total</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="notes">Notes</string>
    <string name="status">Status</string>
    <string name="choose">Choose</string>
    <string name="show_all">Show All</string>
    <string name="speak">Speak</string>
    <string name="custom">Custom</string>
    //  Menu Strings
    <string name="action_show_job">Show Job</string>
    <string name="action_delete">Delete</string>
    <string name="about_jobtracker">About Jobtracker</string>
    //  End Menu Strings

</resources>
