<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hmns="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    tools:context=".ActivityAbout"
    android:onClick="onActivityClick">

    <RelativeLayout
        android:id="@+id/rloAboutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepMidnightBlue"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/txvAboutJobTracker"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/job_tracker"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txvAboutAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvAboutJobTracker"
            android:layout_centerHorizontal="true"
            android:text="@string/aboutAuthor"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/copyright"
            android:id="@+id/txvAboutCopyright"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txvAboutAuthor"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/lloAboutVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvAboutCopyright"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txvAboutVersionLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:gravity="right|center_vertical"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvAboutVersionVal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="left|center_vertical"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lloAboutDBSchema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lloAboutVersion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txvAboutDBSchemaLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:gravity="right|center_vertical"
                android:text="@string/db_schema"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txvAboutDBSchemaVal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="left|center_vertical"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lloAboutBuildDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_below="@+id/lloAboutDBSchema">

            <TextView
                android:id="@+id/txvAboutBuildDateLbl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:gravity="right|center_vertical"
                android:text="@string/buildDate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvAboutBuildDateVal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="left|center_vertical"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rloAboutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepMidnightBlue"
        android:paddingBottom="10dp"
        android:layout_below="@+id/rloAboutTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txvAboutFeedback"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/feedback"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txvAboutFeedbackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvAboutFeedback"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/feedbackText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btbAboutFeedback"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/txvAboutFeedbackText"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:background="@color/firebrick"
            android:text="@string/sendFeedback"
            android:textColor="@color/white"
            android:onClick="onFeedbackClicked"/>

    </RelativeLayout>

</RelativeLayout>