<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_employers"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rdfmobileapps.jobtracker.ActivityEmployers"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/employers"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txvEmployersTitle"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_text_size"/>

    <com.rdfmobileapps.jobtracker.RDTopButtons
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_button_height"
        android:id="@+id/rdtbEmployers"
        custom:saveButtonVisible="false"
        custom:cancelButtonVisible="false"
        custom:customButtonVisible="true"
        custom:customButtonText="@string/add_new_employer"
        custom:vibrateOnClick="true"
        android:layout_below="@+id/txvEmployersTitle"
        android:layout_marginTop="10dp">
    </com.rdfmobileapps.jobtracker.RDTopButtons>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rdtbEmployers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/lsvEmployers"/>

    <CheckBox
        android:text="@string/show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkEmpsShowAll"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/firebrick"
        android:onClick="onShowAllClick"/>
</RelativeLayout>
